comp done